--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "libsignal-service",
+  "name": "@throneless/libsignal-service",
   "version": "0.1.0",
   "description": "A fork of the the libtextsecure components of Signal-Desktop, adapted for use by nodejs.",
   "main": "src/index.js",
