--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "axolotl"
   ],
   "author": "Josh King <josh@throneless.tech>",
-  "license": "GPL-3.0",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/throneless-tech/libsignal-service-javascript/issues"
   },
