--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "lint-staged": "^7.3.0",
     "mocha": "^5.2.0",
     "mock-socket": "^8.0.1",
+    "node-localstorage": "^1.3.1",
     "prettier": "^1.14.3",
     "prettier-eslint-cli": "^4.7.1"
   }
