--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@sindresorhus/is": "^0.12.0",
+    "@throneless/libsignal-protocol": "^0.1.3",
     "btoa": "^1.2.1",
     "config": "^1.30.0",
     "event-target-shim": "^3.0.2",
@@ -47,7 +48,6 @@
     "node-fetch": "^2.1.2",
     "protobufjs": "^6.8.6",
     "proxy-agent": "^3.0.3",
-    "signal-protocol": "^0.1.3",
     "tiny-worker": "^2.1.2",
     "websocket": "^1.0.26",
     "xmlhttprequest": "*"
