--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@throneless/libsignal-service",
-  "version": "0.1.7",
+  "version": "0.2.0",
   "description": "A fork of the the libtextsecure components of Signal-Desktop, adapted for use by nodejs.",
   "main": "src/index.js",
   "scripts": {
@@ -39,31 +39,38 @@
     "@throneless/libsignal-protocol": "^0.1.3",
     "btoa": "^1.2.1",
     "config": "^1.30.0",
+    "debug": "^4.1.1",
     "event-target-shim": "^3.0.2",
     "filereader": "^0.10.3",
     "get-random-values": "^1.2.0",
+    "https": "^1.0.0",
     "libphonenumber-js": "^0.3.14",
     "lodash": "^4.17.11",
     "long": "^4.0.0",
-    "node-fetch": "^2.1.2",
+    "node-fetch": "^2.6.0",
+    "node-webcrypto-ossl": "^1.0.47",
+    "p-queue": "^6.0.2",
     "protobufjs": "^6.8.6",
-    "proxy-agent": "^3.0.3",
-    "tiny-worker": "^2.1.2",
+    "proxy-agent": "^3.1.0",
+    "qs": "^6.7.0",
+    "tiny-worker": "^2.2.0",
+    "uuid": "^3.3.2",
     "websocket": "^1.0.26",
     "xmlhttprequest": "*"
   },
   "devDependencies": {
     "chai": "^4.2.0",
     "co": "^4.6.0",
-    "eslint": "^5.6.1",
-    "eslint-config-prettier": "^3.1.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "husky": "^1.1.2",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^3.6.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^1.3.1",
     "lint-staged": "^7.3.0",
     "mocha": "^5.2.0",
-    "mock-socket": "^8.0.1",
+    "mock-socket": "^8.0.5",
+    "node-blob": "0.0.2",
     "node-localstorage": "^1.3.1",
-    "prettier": "^1.14.3",
+    "prettier": "^1.17.1",
     "prettier-eslint-cli": "^4.7.1"
   }
 }
