--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@sindresorhus/is": "^0.12.0",
     "@throneless/libsignal-protocol": "^0.1.7",
     "btoa": "^1.2.1",
+    "bytebuffer": "^5.0.1",
     "config": "^1.30.0",
     "debug": "^4.1.1",
     "filereader": "^0.10.3",
@@ -68,7 +69,11 @@
     "chai": "^4.2.0",
     "co": "^4.6.0",
     "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^3.6.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-mocha": "^8.0.0",
+    "eslint-plugin-more": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "^1.3.1",
     "lint-staged": "^7.3.0",
