--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   ],
   "scripts": {
     "clean": "rimraf dist/*.js",
-    "build:protobuf": "pbjs --target static-module --wrap es6 --keep-case -o dist/protobufs.js protos/*.proto",
-    "build:protobuf:types": "pbts -o dist/protobufs.d.ts dist/protobufs.js",
+    "build:protobuf": "make-dir dist && pbjs --target static-module --wrap es6 --keep-case -o dist/protobufs.js protos/*.proto",
+    "build:protobuf:types": "make-dir dist && pbts -o dist/protobufs.d.ts dist/protobufs.js",
     "build:barrelsby": "barrelsby --delete -d src/shims",
     "build:webpack": "webpack",
     "build": "npm run build:protobuf && npm run build:protobuf:types && npm run build:barrelsby && npm run build:webpack"
@@ -95,6 +95,7 @@
     "global": "^4.4.0",
     "husky": "^1.3.1",
     "lint-staged": "^7.3.0",
+    "make-dir-cli": "^2.0.0",
     "mock-socket": "^8.1.1",
     "node-blob": "0.0.2",
     "node-localstorage": "^1.3.1",
