--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "devDependencies": {
     "@types/bytebuffer": "^5.0.42",
+    "@types/config": "0.0.38",
     "@types/debug": "^4.1.5",
     "@types/google-libphonenumber": "7.4.14",
     "@types/image-size": "^0.8.0",
